--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>
         Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.
       </p>
-
+      <div class="line-separator"></div>
       <ul>
         <li>Kingdom: Animalia</li>
         <li>Phylum: Arthropoda</li>
@@ -25,7 +25,7 @@
         <li>Superfamily: Scarabaeoidea</li>
         <li>Family: Scarabidae</li>
       </ul>
-
+      <div class="line-separator"></div>
       <div class="btn-wrap">
         <span class="btn">Learn more...</span>
       </div>
