changes made to box width

--- a/index.html
+++ b/index.html
@@ -16,15 +16,26 @@
         Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.
       </p>
       <div class="line-separator"></div>
-      <ul>
-        <li>Kingdom: Animalia</li>
-        <li>Phylum: Arthropoda</li>
-        <li>Class: Insecta</li>
-        <li>Order: Coleoptera</li>
-        <li>Suborder: Polyphaga</li>
-        <li>Superfamily: Scarabaeoidea</li>
-        <li>Family: Scarabidae</li>
-      </ul>
+      <div class="info-boxes">
+        <ul>
+          <li>Kingdom</li>
+          <li>Phylum</li>
+          <li>Class</li>
+          <li>Order</li>
+          <li>Suborder</li>
+          <li>Superfamily</li>
+          <li>Family</li>
+        </ul>
+        <ul class="italic">
+          <li>Animalia</li>
+          <li>Arthropoda</li>
+          <li>Insecta</li>
+          <li>Coleoptera</li>
+          <li>Polyphaga</li>
+          <li>Scarabaeoidea</li>
+          <li>Scarabidae</li>
+        </ul>
+      </div>
       <div class="line-separator"></div>
       <div class="btn-wrap">
         <span class="btn">Learn more...</span>
